new icon - DNA X-ray diffraction

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8" />
         <meta name="author" content="Felipe Vaz Peres" />
         <title>Felipe Vaz Peres</title>
-        <link rel="shortcut icon" href="docs/dna.ico" />
+        <link rel="shortcut icon" href="docs/photo_51.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="adequate.css" />
     </head>
