--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>
             Before grad school, I was an undergraduate student in biotechnology at the
             <a href="https://www.araras.ufscar.br/">University of São Carlos</a>. 
-            I joined LabBCES in 2019, where I fell in love with bioinformatics <3.
+            I joined LabBCES in 2019 and fell in love with bioinformatics <3.
         </p>
 
         <p>
