--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <li>
                 SCPT
                 <div class="desc">
-                    <a href="docs/InferenceAndAnnotationOfTheSugarcanePanTranscriptome_ISMB2022.pdf">Poster</a>
+                    <a href="docs/ISMB2022_FVP_Presentation.pdf">Presentation</a>
+                    / 
+                    <a href="docs/SPGCENA_FVP_2022.pdf">Poster</a>
                     / 
                     <a href="https://github.com/labbces/SCPT">Code</a>
                 </div>
@@ -69,6 +71,8 @@
             <li>
                 ContFree-NGS
                 <div class="desc">
+                    <a href="docs/BSB2021_FVP_Presentation.pdf">Presentation</a>
+                    / 
                     <a href="https://link.springer.com/chapter/10.1007/978-3-030-91814-9_6">Paper</a>
                     / 
                     <a href="https://github.com/labbces/ContFree-NGS">Code</a>
