--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="desc">
                     <a href="docs/ISMB2022_FVP_Presentation.pdf">Presentation</a>
                     / 
-                    <a href="docs/SPGCENA_FVP_2022.pdf">Poster</a>
+                    <a href="docs/SPGCENA2022_FVP_Poster.pdf">Poster</a>
                     / 
                     <a href="https://github.com/labbces/SCPT">Code</a>
                 </div>
