--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
         <p>
             I'm a M.Sc. student in bioinformatics at the
-            <a href="http://www.cena.usp.br/" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'CENA Website'});">Center for Nuclear Energy in Agriculture - University of São Paulo</a>,
+            <a href="http://www.cena.usp.br/" target="_blank" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'CENA Website'});">Center for Nuclear Energy in Agriculture - University of São Paulo</a>,
             working in the
-            <a href="https://labbces.netlify.app/" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'LabBCES Website'});">LabBCES</a>.
+            <a href="https://labbces.netlify.app/" target="_blank" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'LabBCES Website'});">LabBCES</a>.
         </p>
 
         <p>
@@ -42,7 +42,7 @@
         </p>
 
         <p>
-            Below are some of my contributions. Additional work can be seen on my <a href="https://github.com/felipevzps" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'GitHub Profile Main Text'});">GitHub profile</a>.
+            Below are some of my contributions. Additional work can be seen on my <a href="https://github.com/felipevzps" target="_blank" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'GitHub Profile Main Text'});">GitHub profile</a>.
         </p>
 
         <p>
