--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         <p>
             I'm a M.Sc. student in bioinformatics at the
             <a href="http://www.cena.usp.br/" target="_blank" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'CENA Website'});">Center for Nuclear Energy in Agriculture - University of São Paulo</a>,
+            
             working in the
-            <a href="https://labbces.netlify.app/" target="_blank" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'LabBCES Website'});">LabBCES</a>.
+            <a href="https://labbces.netlify.app/" target="_blank" onclick="console.log('Evento enviado: LabBCES Website'); gtag('event', 'click', {'event_category': 'link', 'event_label': 'LabBCES Website'});">LabBCES</a>.
+
         </p>
 
         <p>
