point to page 36

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <img src="docs/darwin.png" alt="evolutionary tree sketch" width="250" height="auto">
                 </div>
                 <div class="links">
-                    <a href="http://darwin-online.org.uk/content/frameset?itemID=CUL-DAR121.-&amp;viewtype=image&amp;pageseq=1" target="_blank" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'Darwin Tree'});">Page 36 of Notebook B: Transmutation of species (1837)</a>
+                    <a href="https://darwin-online.org.uk/content/frameset?itemID=CUL-DAR121.-&viewtype=image&pageseq=38" target="_blank" onclick="gtag('event', 'click', {'event_category': 'link', 'event_label': 'Darwin Tree'});">Page 36 of Notebook B: Transmutation of species (1837)</a>
                 </div>
             `);
 
