add link to paper-trackr newsletter

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             <span class="monotext">felipe.vzps (at) gmail (dot) com</span>
         </p>
 
+        <p>
+            Interested in what was published yesterday in bioinformatics? 
+            I maintain a scientific feed tracking the latest papers, updated daily!
+            <a href="newsletter/paper-trackr_newsletter.html" target="_blank">See the latest feed →</a>
+        </p>
+
         <h3>Research projects</h3>
         (Additional work can be seen on my GitHub profile: <a href="https://github.com/felipevzps" target="_blank">felipevzps</a>)
         <ul>
@@ -107,6 +113,8 @@
                     <a href="https://github.com/felipevzps/paper-trackr" target="_blank">Code</a>
                     /
                     <a href="https://pypi.org/project/paper-trackr/" target="_blank">Package</a>
+                    /
+                    <a href="newsletter/paper-trackr_newsletter.html" target="_blank">Demo</a>
                 </div>
                 <div class="desc">
                     Tired of missing out on cool papers? stay up to date with paper-trackr!
