--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="adequate.css" />
     </head>
     <body>
-        <h2>Felipe Vaz Peres</h2>
+        <h1>Felipe Vaz Peres</h1>
 
         <p>
             I'm a M.Sc. student in bioinformatics at the
@@ -33,13 +33,13 @@
             <span class="monotext">felipe.vzps (at) gmail (dot) com</span>
         </p>
 
-        <p>
-            Interested in what was published yesterday in bioinformatics? 
-            I maintain a scientific feed tracking the latest papers, updated daily!
-            <a href="newsletter/paper-trackr_newsletter.html" target="_blank">See the latest feed →</a>
-        </p>
+        <div style="border-left: 4px solid #ccc; padding-left: 12px; margin-top: 20px; color: gray; font-size: 16px; font-style: italic;">
+    	    Curious about what dropped in bioinformatics yesterday?<br>
+            I maintain a daily updated feed of new papers!
+            <a href="newsletter/paper-trackr_newsletter.html" target="_blank">Take a look →</a>
+        </div></p>
 
-        <h3>Research projects</h3>
+        <h2>Research projects</h2>
         (Additional work can be seen on my GitHub profile: <a href="https://github.com/felipevzps" target="_blank">felipevzps</a>)
         <ul>
             <li>
@@ -104,7 +104,7 @@
    
         </ul>
 
-        <h3>Side projects</h3>
+        <h2>Side projects</h2>
         <ul>
     
             <li>
