--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <a href="https://link.springer.com/chapter/10.1007/978-3-030-91814-9_6" target="_blank">Paper</a>
                 </div>
                 <div class="desc">
-                    Tool designed to remove contaminant sequences from NGS datasets
+                    Tool designed to remove contaminant sequences from NGS datasets.
                 </div>
             </li>
    
@@ -144,7 +144,7 @@
             </li>
         </ul>
 
-        <h3>Miscellany</h3>
+        <h2>Miscellany</h2>
         <ul>
             <li><a href="docs/fvp_cv.pdf" target="_blank">Curriculum Vitae</a></li>
             <li><a href="http://github.com/felipevzps" target="_blank">GitHub profile</a></li>
