fix KAPT project description

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <h3>KAPT</h3>
-                        <p>Nextflow pipeline for automated inference of the Kappaphycus alvarezii pan-transcriptome through de novo assembly and comprehensive functional annotation.</p>
+                        <p>Nextflow pipeline for automated inference of the Kappaphycus alvarezii proteome through de novo transcriptome assembly and comprehensive functional annotation.</p>
                         <div class="project-links">
                             <a href="https://github.com/felipevzps/KAPT" class="project-link" target="_blank">GitHub</a>
                         </div>
