add link to thesis

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <p>This study focuses on characterizing ncRNAs and lncRNAs in sugarcane, addressing gaps in understanding their variability, conservation, co-expression patterns, and functional roles.</p>
                         <div class="project-links">
                             <a href="https://github.com/labbces/sugarcane_RNAome" class="project-link" target="_blank">GitHub</a>
+                            <a href="https://www.teses.usp.br/teses/disponiveis/64/64133/tde-22052025-110836/en.php" class="project-link" target="_blank">Thesis</a>
                         </div>
                     </div>
 
