--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Felipe Vaz Peres - Bioinformatics Scientist</title>
     <link rel="shortcut icon" href="docs/photo_51.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="adequate.css" />    
+    <link rel="stylesheet" type="text/css" href="style.css" />    
 </head>
 
 <body>
