add a note in the software section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <section id="research" class="section">
             <div class="container">
                 <h2 class="section-title">Research Projects</h2>
+
+                <p class="section-description">Below are my research contributions as first author, with exciting new projects in progress!</p>
+
                 <div class="projects-grid">
                     <div class="project-card">
                         <h3>pan-RNAome</h3>
@@ -91,6 +94,14 @@
             <div class="container">
                 <h2 class="section-title">Software & Development</h2>
                 <div class="projects-grid">
+                    
+                    <div class="note-card">
+                        <h3>Computational Reproducibility</h3>
+                        <p>Ensuring reproducibility remains one of the major challenges in computational biology.<br> 
+                        To address this, I develop robust, efficient, and reproducible bioinformatics workflows.</p>
+                        <p>This section highlights my contributions to bioinformatics software, showcasing the tools and workflows from projects I've been involved in.</p>
+                    </div>
+
                     <div class="project-card">
                         <h3>KAPT</h3>
                         <p>Nextflow pipeline for automated inference of the Kappaphycus alvarezii proteome through de novo transcriptome assembly and comprehensive functional annotation.</p>
