--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="note-card">
                         <h3>Computational Reproducibility</h3>
                         <p>Ensuring reproducibility remains one of the major challenges in computational biology.<br> 
-                        To address this, I develop robust, efficient, and reproducible bioinformatics workflows.</p>
+                        To address this, I develop robust, efficient, and reproducible workflows.</p>
                         <p>This section highlights my contributions to bioinformatics software, showcasing the tools and workflows from projects I've been involved in.</p>
                     </div>
 
