reduce hero-description text

--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
                 <div class="hero-content">
                     <h1>Felipe Vaz Peres</h1>
                     <p class="hero-subtitle">Bioinformatics Scientist</p>
-                    <p class="hero-description">
-                    I’m a bioinformatics scientist with a <strong>Master’s degree in Bioinformatics</strong> and <strong>6 years of experience</strong> in computational biology and large-scale data analysis. I am particularly interested in computational approaches to <strong>genomics, metagenomics, transcriptomics, non-coding RNA</strong>, and developing <strong>efficient & reproducible workflows</strong> in bioinformatics. 
-                    </p>
-                    <p class="hero-description">
-                         My work involves applying computational methods to address complex biological problems.
-                    </p>
+                    <p class="hero-description">I am a <strong>bioinformatics scientist</strong> with a <strong>Master’s degree in Bioinformatics</strong> and <strong>6 years of experience</strong> in computational biology and large-scale data analysis.</p>
+                    <p class="hero-description">I am particularly interested in computational approaches to <strong>genomics</strong>, <strong>metagenomics</strong>, <strong>transcriptomics</strong>, <strong>non-coding RNA</strong>, and developing <strong>efficient & reproducible workflows</strong>.</p>
                     <div class="cta-buttons">
                         <a href="#research" class="btn btn-primary">View Research</a>
                         <a href="docs/fvp_cv.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
