add linkedin social-link

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                         <a href="https://github.com/felipevzps" class="social-link" target="_blank">GitHub</a>
                         <a href="https://scholar.google.com/citations?user=jLu_yMIAAAAJ" class="social-link" target="_blank">Google Scholar</a>
                         <a href="docs/fvp_cv.pdf" class="social-link" target="_blank">Curriculum Vitae</a>
+                        <a href="https://www.linkedin.com/in/felipevzps/" class="social-link" target="_blank">LinkedIn</a>
                     </div>
                 </div>
             </div>
