--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <nav class="nav container">
-            <a href="#" class="logo">Felipe Vaz Peres</a>
+            <a href="#" class="logo">felipevzps</a>
             <ul class="nav-links">
                 <li><a href="#">About</a></li>
                 <li><a href="#research">Research</a></li>
