add card for transcriptome_microbiome_integration

--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
                     </div>
 
                     <div class="project-card">
+                        <h3>T-M Integration</h3>
+                        <p>Nextflow pipeline for automated integration of transcriptomic and microbiome data, performing cross-correlation analysis to uncover potential host transcriptome-microbiome associations.</p>
+                        <div class="project-links">
+                            <a href="https://github.com/SantosRAC/transcriptome_microbiome_integration" class="project-link" target="_blank">GitHub</a>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
                         <h3>R2C</h3>
                         <p>Nextflow pipeline for scalable gene co-expression network analysis. It automates the process from data download, quantification and network construction.</p>
                         <div class="project-links">
