--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="hero-content">
                     <h1>Felipe Vaz Peres</h1>
                     <p class="hero-subtitle">Bioinformatics Scientist</p>
-                    <p class="hero-description">I am a <strong>bioinformatics scientist</strong> with a <strong>Master’s degree in Bioinformatics</strong> and <strong>6 years of experience</strong> in computational biology and large-scale data analysis.</p>
-                    <p class="hero-description">I am particularly interested in computational approaches to <strong>genomics</strong>, <strong>metagenomics</strong>, <strong>transcriptomics</strong>, <strong>non-coding RNA</strong>, and developing <strong>efficient & reproducible workflows</strong>.</p>
+                    <p class="hero-description">I am a bioinformatics scientist with a M.Sc. in Bioinformatics and 6 years of experience in computational biology and large scale data analysis</p>
+                    <p class="hero-description">I am particularly interested in computational approaches to genomics, metagenomics, transcriptomics, non-coding RNA, and developing efficient & reproducible workflows</p>
                     <div class="cta-buttons">
                         <a href="#research" class="btn btn-primary">View Research</a>
                         <a href="docs/fvp_cv.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
@@ -47,14 +47,14 @@
         <div class="container">
             <div class="newsletter-banner">
                 <h3>Latest Bioinformatics Papers</h3>
-                <p>I maintain a daily feed of new publications in <strong>bioinformatics</strong> and <strong>computational biology</strong>, take a look!</p>
+                <p>I maintain a daily feed of new publications in bioinformatics and computational biology, take a look!</p>
                 <a href="newsletter/paper-trackr_newsletter.html" class="btn" target="_blank">View Newsletter →</a>
             </div>
         </div>
 
         <section id="research" class="section">
             <div class="container">
-                <h2 class="section-title">Research Projects</h2>
+                <h2 class="section-title">Research</h2>
 
                 <p class="section-description">Below are my research contributions as first author, with exciting new projects in progress!</p>
 
@@ -98,8 +98,7 @@
                     
                     <div class="note-card">
                         <h3>Computational Reproducibility</h3>
-                        <p>Ensuring reproducibility remains one of the major challenges in computational biology.<br> 
-                        To address this, I develop robust, efficient, and reproducible workflows.</p>
+                        <p>Ensuring reproducibility remains one of the major challenges in computational biology. To address this, I develop robust, efficient, and reproducible workflows.</p>
                         <p>This section highlights my contributions to bioinformatics software, showcasing the tools and workflows from projects I've been involved in.</p>
                     </div>
 
