--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="hero-content">
                     <h1>Felipe Vaz Peres</h1>
                     <p class="hero-subtitle">Bioinformatics Scientist</p>
-                    <p class="hero-description">I am a bioinformatics scientist with a M.Sc. in Bioinformatics and 6 years of experience in computational biology and large scale data analysis</p>
-                    <p class="hero-description">I am particularly interested in computational approaches to genomics, metagenomics, transcriptomics, non-coding RNA, and developing efficient & reproducible workflows</p>
+                    <p class="hero-description">I am a bioinformatics scientist with a M.Sc. in Bioinformatics and 6 years of experience in computational biology and large scale data analysis.</p>
+                    <p class="hero-description">I am particularly interested in computational approaches to genomics, metagenomics, transcriptomics, non-coding RNA, and developing efficient & reproducible workflows.</p>
                     <div class="cta-buttons">
                         <a href="#research" class="btn btn-primary">View Research</a>
                         <a href="docs/fvp_cv.pdf" class="btn btn-secondary" target="_blank">Download CV</a>
