--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Felipe Vaz Peres" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Felipe Vaz Peres - Bioinformatics Scientist</title>
+    <title>Felipe Vaz Peres - Data Scientist</title>
     <link rel="shortcut icon" href="docs/photo_51.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />    
@@ -33,8 +33,8 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Felipe Vaz Peres</h1>
-                    <p class="hero-subtitle">Bioinformatics Scientist</p>
-                    <p class="hero-description">I am a bioinformatics scientist with a M.Sc. in Bioinformatics and 6+ years of experience in computational biology and large scale data analysis.</p>
+                    <p class="hero-subtitle">Data Scientist</p>
+                    <p class="hero-description">I am a data scientist with a M.Sc. in Bioinformatics and 6+ years of experience in computational biology and large scale data analysis.</p>
                     <p class="hero-description">I am particularly interested in computational approaches to omics, non-coding RNA, cancer research and developing efficient & reproducible workflows.</p>
                     <div class="cta-buttons">
                         <a href="#research" class="btn btn-primary">View Research</a>
