add mailto button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#about">About</a>
       <a href="#research">Research</a>
       <a href="#software">Software</a>
-      <a href="#contact">Get in touch</a>
+      <a href="#contact">Contact</a>
     </nav>
   </aside>
 
@@ -240,11 +240,17 @@
 
     <!-- GET IN TOUCH -->
     <section id="contact" class="section contact-section">
-      <h2 class="section-title">Get in touch</h2>
-      <p class="contact-desc">
-        Interested in collaboration or have questions about my research?<br> Feel free to reach out!
-      </p>
+      <h2 class="section-title">Contact</h2>
+      <p class="contact-desc">Interested in collaboration or have questions about my research?<br> Feel free to reach out!</p>
       <div class="contact-buttons-group">
+
+        <a href="mailto:felipe.vzps@gmail.com" class="contact-button" target="_blank">
+          Email
+          <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
+            <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+        </a>
+
         <a href="https://github.com/felipevzps" class="contact-button" target="_blank">
           GitHub
           <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
