--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="card-grid">
         <div class="note-card">
           <div class="note-card-image">
-            <img src="docs/H.png" alt="Tool 2" />
+            <img src="docs/F.png" alt="Tool 2" />
           </div>
           <div class="note-card-body">
             <h3>Computational Reproducibility</h3>
@@ -200,7 +200,26 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/E.png" alt="Tool 3" />
+            <img src="docs/I.png" alt="Tool 3" />
+          </div>
+          <div class="card-body">
+            <h3>seabed symphony</h3>
+            <p>Metagenomics pipeline for Biosynthetic Gene Cluster discovery. Designed for identification of novel BGCs in microbiome of marine sediments.</p>
+            <div class="card-buttons">
+              <a href="https://github.com/felipevzps/seabed-symphony" class="btn dark" target="_blank">
+                GitHub
+                <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
+                  <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="oa-card">
+          <div class="card-image">
+            <img src="docs/G.png" alt="Tool 3" />
           </div>
           <div class="card-body">
             <h3>YAATAP</h3>
@@ -218,7 +237,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/F.png" alt="Tool 3" />
+            <img src="docs/E.png" alt="Tool 3" />
           </div>
           <div class="card-body">
             <h3>paper-trackr</h3>
@@ -266,7 +285,7 @@
         </a>
         
         <a href="docs/fvp_cv.pdf" class="contact-button" target="_blank">
-          <i>Curriculum Vitae</i>
+          Curriculum Vitae
           <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
             <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
