add hackathon section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="#about">About</a>
       <a href="#research">Research</a>
       <a href="#software">Software</a>
+      <a href="#hackathon">Hackathon</a>
       <a href="#contact">Contact</a>
     </nav>
   </aside>
@@ -247,6 +248,67 @@
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
               </a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- HACKATHON SECTION -->
+    <section id="hackathon" class="section">
+      <h2 class="section-title">Hackathon</h2>
+      <p class="section-description">I see hackathons as the ultimate proving ground. It’s where collaborative coding meets high-level problem solving. Working under intense pressure doesn't just forge innovative solutions, it forces a rapid, real-time exchange of scientific and technical knowledge. Beyond the code, these sprints deliver the most valuable result for us: a network of brilliant people and lifelong friends who share a passion for building the future.</p>
+      <p class="section-description">Below are some of my most rewarding hackathon experiences.</p>
+
+      <div class="card-grid">
+        <div class="oa-card">
+          <div class="card-image">
+            <img src="docs/lbb_2025.png" alt="Tool 2" />
+          </div>
+          <div class="card-body">
+            <h3>LBB 2025</h3>
+            <p>3rd place at the "Liga Brasileira de Bioinformática 2025", the largest bioinformatics competition in Latin America, focused on solving computational biology challenges.</p> 
+            <div class="card-buttons">
+              <a href="https://lbb.rsg-brazil.com/sobre" class="btn white" target="_blank">About</a>
+              <a href="https://github.com/Wet-Lab-Sucks" class="btn dark" target="_blank">
+                GitHub
+                <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
+                  <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="oa-card">
+          <div class="card-image">
+            <img src="docs/mendelics_2021.png" alt="Tool 2" />
+          </div>
+          <div class="card-body">
+            <h3>Mendelics 2021</h3>
+            <p>3rd place at the "Mendelics Challenge". Developed a fully automated variant calling pipeline in less than 48 hours using real genomic data.</p>
+            <div class="card-buttons">
+              <a href="https://github.com/mendelics/lbb-mendelics-2021" class="btn white" target="_blank">About</a>
+              <a href="https://github.com/felipevzps/x880rsfvj" class="btn dark" target="_blank">
+                GitHub
+                <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
+                  <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="oa-card">
+          <div class="card-image">
+            <img src="docs/biohack_2018.png" alt="Tool 2" />
+          </div>
+          <div class="card-body">
+            <h3>Biohack 2018</h3>
+            <p>2nd place at the "Synthetic Biology Hackathon (BIOHACK)". Designed <b>BIOREMEDYATOR</b>, a bioremediation project presented at Brazil’s largest biotechnology conference.</p>
+            <div class="card-buttons">
+              <a href="https://nucleo2018.wixsite.com/saocarlos/maratonas" class="btn white" target="_blank">About</a>
             </div>
           </div>
         </div>
