add easter egg decription for the pale blue dot

--- a/index.html
+++ b/index.html
@@ -97,8 +97,18 @@
         </div>
 
         <div class="oa-card">
-          <div class="composition-card-image">
-              <!-- <img src="docs/C.png"/> !-->
+          <div class="composition-card-image flip-container">
+            <div class="flip-inner">
+              <div class="flip-front">
+                <!-- Frente: composição Pale Blue Dot -->
+              </div>
+              <div class="flip-back">
+                <div class="flip-back-text">
+                  <p>"Look again at that dot. That's here. That's home. That's us." - Carl Sagan</p>
+                  <p class="context-text">The Pale Blue Dot, captured by Voyager 1 in 1990, showing Earth as a tiny speck in the vastness of space, a humbling reminder of our place in the cosmos.</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="card-body">
             <h3>ContFree-NGS</h3>
