fix menu sidebar

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 <body>
   <aside class="sidebar">
-    <a href="#about" class="logo">felipevzps</a>
+    <div class="sidebar-inner"> 
+      <a href="#about" class="logo">felipevzps</a>
 
-    <nav class="nav">
-      <a href="#about">About</a>
-      <a href="#research">Research</a>
-      <a href="#software">Software</a>
-      <a href="#hackathon">Hackathon</a>
-      <a href="#contact">Contact</a>
-    </nav>
+      <nav class="nav">
+        <a href="#about">About</a>
+        <a href="#research">Research</a>
+        <a href="#software">Software</a>
+        <a href="#hackathon">Hackathon</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </aside>
 
   <main class="content">
