fix hackathon name

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <img src="docs/biohack_2018.png" alt="Tool 2" />
           </div>
           <div class="card-body">
-            <h3>Biohack 2018</h3>
+            <h3>BIOHACK 2018</h3>
             <p>2nd place at the "Synthetic Biology Hackathon (BIOHACK)". Designed <b>BIOREMEDYATOR</b>, a bioremediation project presented at Brazil’s largest biotechnology conference.</p>
             <div class="card-buttons">
               <a href="https://nucleo2018.wixsite.com/saocarlos/maratonas" class="btn white" target="_blank">About</a>
