replace number with text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Felipe Vaz Peres</h1>
         <h2>Data Scientist | Bioinformatician</h2>
         <p>
-          I am a data scientist with a M.Sc. in Bioinformatics and 6+ years of experience in computational biology and large scale data analysis.<br>
+          I am a data scientist with a M.Sc. in bioinformatics and over six years of experience in computational biology and large scale data analysis.<br>
         </p>
         <p>
           I am particularly interested in computational approaches to cancer research, omics, non-coding RNA and developing efficient & reproducible workflows.
