update banner text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="banner">
         <div class="banner-content">
         <h1>Latest in Bioinformatics</h1>
-        <p>A quick way to see what’s shaping the field.</p>
+        <p>An app I built to track what’s shaping the field.</p>
         <a href="newsletter/paper-trackr_newsletter.html" class="btn white" target="_blank">
           View Recent Papers
           <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
